<resources>

    <!-- General -->
    <string name="app_name">PersonalBest</string>
    <string name="app_name_all_caps">PERSONAL BEST</string>

    <!-- Sign In -->
    <string name="login">LogInStatus</string>
    <string name="done">Done</string>

    <!-- MainPageActivity -->
    <string name="blank">""</string>
    <string name="steps_done">STEPS DONE:</string>
    <string name="steps_goal">GOAL:</string>
    <string name="start_walk">Start Walk</string>
    <string name="start_run">Start Run</string>
    <string name="see_bar_chart">Weekly Bar Chart</string>
    <string name="see_monthly_bar_chart"> Monthly Bar Chart</string>
    <string name="user_settings">User Settings</string>
    <string name="update_steps">UPDATE STEPS</string>
    <string name="update_data">Send friends my updated data</string>
    <string name="step_count_before_switch_to_start_walk_activity">totalStepBeforeSwitch</string>

    <!-- Encouragement -->
    <string name="goal_reached">"Congratulations! Do you want to set a new step goal?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"Not Now"</string>
    <string name="custom_goal">"Custom goal:"</string>
    <string name="custom_goal_hint">"Enter a custom goal:"</string>
    <string name="suggested_goal">"Suggested goal:"</string>
    <string name="pick_suggested_goal">"Accept suggested goal"</string>
    <string name="pick_custom_goal">"Accept custom goal"</string>
    <string name="goal_msg_expires">"Day goal message needs to be shown by"</string>
    <string name="goal_msg_shown">"Goal congrats message already shown once this week"</string>
    <string name="goal_exceeded_today">"Goal exceeded already today"</string>
    <string name="subgoal_reached">"Subgoal was met"</string>
    <string name="subgoal_msg_expires">"Day subgoal message needs to be shown by"</string>
    <string name="subgoal_exceeded_today">"Subgoal exceeded already today"</string>
    <string name="day_storage">"Day currently stored in SharedPref"</string>
    <string name="subgoal_msg_p1">"You've increased your daily steps by over "</string>
    <string name="subgoal_msg_p2">" steps. Keep up the good work!"</string>

    <!-- WalkActivity -->
    <string name="end_walk">End Walk</string>
    <string name="intentionalStep">intentionalStep</string>
    <string name="end_run">End Run</string>
    <string name="time_elapsed">Time Elapsed:</string>
    <string name="mph">MPH:</string>
    <string name="steps">Steps:</string>
    <string name="miles">Miles:</string>

    <!-- HeightInputActivity -->
    <string name="input_height">Input Your Height</string>
    <string name="height_purpose">Your height will be used to estimate your stride length</string>
    <string name="inches">inches</string>
    <string name="invalid_input">Invalid height. Please input your height in inches.</string>
    <string name="empty_input">Please input your height</string>

    <!-- SharedPreferences -->
    <string name="user_prefs">userPrefs</string>
    <string name="first_time">firstTime</string>
    <string name="height">height</string>
    <string name="goal">goal</string>
    <string name="current_user_email">currentAppUserEmail</string>
    <string name="friend_email">friendEmail</string>
    <string name="monthly_email">MonthlyEmail</string>
    <string name="friend_list_set">friendListSet</string>

    <!-- UserSettings -->
    <string name="settings">SETTINGS</string>
    <string name="change_goal">Change Goal</string>
    <string name="goal_input_empty">Please enter a goal</string>
    <string name="input_zero">Please enter a number greater than zero</string>
    <string name="app_proposed_goals">App-Proposed Goals</string>
    <string name="home">Home</string>
    <string name="walker_or_runner">Walker or Runner?</string>
    <string name="walker_option">Walker</string>
    <string name="runner_option">Runner</string>
    <string name="input_goal">inputGoal</string>
    <string name="enter">Enter Your New Goal</string>
    <string name="updated">Goal updated!</string>
    <string name="cancel">Cancel</string>

    <!--WalkDataAdapter-->
    <string name="elapsedTime">timeElapsed</string>
    <string name="milesInDisplay">mileInDisplay</string>
    <string name="MPH">MPH</string>
    <string name="_0">0</string>

    <!-- DaysOfWeek -->
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>

    <!-- Bar Chart Stats -->
    <string name="totalStepsTaken">totalStepsTaken</string>
    <string name="intentionalStepsTaken">intentionalStepsTaken</string>
    <string name="intentionalDistanceInMiles">intentionalDistanceInMiles</string>
    <string name="intentionalMilesPerHour">intentionalMilesPerHour</string>
    <string name="intentionalTimeElapsed">intentionalTimeElapsed</string>
    <string name="totalStepsTakenYesterday">totalStepsTakenYesterday</string>
    <string name="emptyString" />
    <string name="totalDistance">Total Distance:</string>
    <string name="averageMPH">Average MPH:</string>
    <string name="totalTime">Total Time:</string>
    <string name="totalSteps">Total Steps Taken:</string>
    <string name="nonIntentional">Non Intentional Steps</string>
    <string name="intentional">Intentional Steps:</string>
    <string name="day_month_storage">Day of month currently stored in SharedPref</string>
    <string name="month_storage">month in storage</string>
    <string name="mpa_tag">MainPageActivity</string>
    <string name="goal_exceeded">Goal Exceeded</string>
    <string name="subgoal_exceeded">Subgoal Exceeded</string>

    <!--friendList.xml-->
    <string name="friendListTitle">Friends</string>
    <string name="add_friend_btn">Add A New Friend</string>
    <string name="return_home">Return Home</string>
    <string name="refresh_friend_list">Refresh List</string>

    <!--sign_up_friend_page.xml-->
    <string name="exampleGmail">example@gmail.com</string>
    <string name="addBtn">Add</string>
    <string name="add_friend_info">Add a new friend \n by entering their email address</string>
    <string name="return_Friend">Go Back To Friends List</string>

    <!--FireStoreAdapter-->
    <string name="pending_friend_list">pendingFriendList</string>
    <string name="friend_list">friendList</string>

    <!-- Notifications -->
    <string name="goalNotifTitle">Personal Best: Goal Met</string>
    <string name="goalNotifBody">Congrats! You met your goal.</string>

    <!-- Chat -->
    <string name="message_will_appear_here">message will appear here</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="go_back">Go Back</string>
    <string name="goalText">Goal:</string>

</resources>
