<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.personalbest.UserSettingsActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="598dp"
        android:text="@string/settings"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeGoal"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="337dp"
        android:text="@string/change_goal"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />

    <CheckBox
        android:id="@+id/appProposedGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="366dp"
        android:checked="true"
        android:text="@string/app_proposed_goals"
        android:textSize="26sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="51dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/walkerOrRunner"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="453dp"
        android:layout_marginBottom="237dp"
        android:text="@string/walker_or_runner"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioChoices"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="494dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="87dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/walkerOption"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/walker_option"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/runnerOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/runner_option"
            android:textSize="20sp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
